# Kairo

./: .gitignore  README.md  docker-compose.yml  launch_local.sh  teardown_local.sh
backend/: Dockerfile  pyproject.toml
backend/scripts/: generate_traffic_data.py  traffic_prediction.ipynb
backend/src/: fetch_graph.py  main.py
frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx
